finishing main page

--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
                 </button>
             </div>
             <div class="justify-between items-center lg:w-[77%] xl:w-auto w-full lg:flex lg:order-1 lg:p-3  hidden w-3/5" id="mobile-menu-2" >
-                <ul class=" flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0 w-full justify-between lg:w-[86%] lg:gap-[110px] lg:m-auto">
+                <ul class=" flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0 w-full justify-between lg:w-[86%] lg:gap-[80px] xl:gap-[110px] lg:m-auto">
                     <li>
                         <a href="#" class="block text-xl xl:text-lg text-center py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 lg:w-max" aria-current="page">الرئيسية</a>
                     </li>
@@ -64,7 +64,7 @@
                <!-- <span pan class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-teal-400">wonderful</span> -->
             </h1>
             <div class="max-w-3xl mx-auto">
-              <p class="text-lg xl:text-[32px] md:text-[26px] text-gray-600 mb-4 md:mb-7 xl:mb-8 aos-init aos-animate lg:text-3xl font-bold" data-aos="zoom-y-out" data-aos-delay="150" style="font-family: sans-serif;">
+              <p class="text-lg xl:text-[32px] md:text-[26px] text-gray-600 mb-4 md:mb-7 xl:mb-8 aos-init aos-animate lg:text-3xl font-bold" data-aos="zoom-y-out" data-aos-delay="150">
                 نظام تقني يعمل على تحليل بيانات المنشأة في  <span pan class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-teal-400 text-2xl	xl:text-[40px] md:text-[38px]">الجهات الحكومية</span>  وتقديم الإرشادات والتوجيهات بشكل مؤتمت لجعل المنشأة بأفضل مما هي عليه
               </p>
               <div class="inline-grid justify-items-center">
@@ -81,12 +81,12 @@
             <iframe src="https://www.youtube.com/embed/0VIdyvM4YI0" frameborder="0" class="w-[343px] h-[209px] sm:w-[620px] sm:h-[350px] lg:w-[810px] lg:h-[496px] xl:w-[1192px] xl:h-[730px]"></iframe>
           </div>
     </section>
-    <section class="mt-48	">
-      <div class="mb-16">
+    <section class="mt-20 md:md-48 xl:mt-44	">
+      <div class="mb-7 md:mb-12 xl:mb-16">
         <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-3 sm:mb-10 aos-init aos-animate text-cyan-500">عن إلمام</h2>
         <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl font-bold">تعريف عن الرؤية والاهداف</h3>
       </div>
-      <div class="md:flex md:justify-center inline-grid gap-40">
+      <div class="md:flex md:justify-center inline-grid gap-9 xl:gap-40">
         <div class="w-[90%] h-full lg:w-[548px] m-auto lg:h-80 rounded-xl" style="box-shadow: 0px 67.114px 109.061px 0px rgba(0, 0, 0, 0.05);">
           <div class="flex justify-center mb-8">
             <img src="imges/eye.svg" alt="" class="ml-2.5 md:ml-5">
@@ -103,17 +103,17 @@
         </div>
       </div>
     </section>
-    <section class="mt-60">
+    <section class="mt-36 md:mt-40 xl:mt-60">
       <div class="flex flex-col mb-[-70px]">
-        <div class="mb-16">
+        <div class="mb-7 md:mb-12 xl:mb-16">
           <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-3 sm:mb-10 aos-init aos-animate text-cyan-500">أهمية إلمام</h2>
           <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl	font-bold">بعض المخاطر التي تتجنبها بإستخدام إلمام</h3>
         </div>
-        <div class="md:flex md:justify-center inline-grid gap-5">
+        <div class="md:flex md:justify-center inline-grid gap-5 xl:gap-16">
           <div class="w-[252px] h-[230px] xl:w-[401px] md:mr-auto m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl bg-white">
             <div class="flex justify-start mb-10">
-              <img src="imges/money-4.svg" alt="" class="ml-5">
-              <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] xl:text-3xl">مخاطر مالية</h4>
+              <img src="imges/money-4.svg" alt="" class="ml-5 bg-[#E4F1F6] rounded-[10px] p-2">
+              <h4 class="mt-auto mb-auto font-bold text-xl md:text-[26px] xl:text-3xl">مخاطر مالية</h4>
             </div>
             <p class="text-xs md:text-sm	xl:text-lg text-slate-500 leading-normal">
               - تجنب الهدر المالي بسبب عدم معرفة بعض الإجراءات الحكومية
@@ -122,8 +122,8 @@
           </div>
           <div class="w-[252px] h-[230px] xl:w-[401px] md:m-0 m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl bg-white">
             <div class="flex justify-start mb-10">
-              <img src="imges/phone.svg" alt="" class="ml-5">
-              <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] xl:text-3xl">مخاطر نظامية</h4>
+              <img src="imges/phone.svg" alt="" class="ml-5 bg-[#E4F1F6] rounded-[10px] p-2">
+              <h4 class="mt-auto mb-auto font-bold text-xl md:text-[26px] xl:text-3xl">مخاطر نظامية</h4>
             </div>
             <p class="text-xs md:text-sm	xl:text-lg text-slate-500 leading-normal">
               - تجنب المشاكل الناتجة عن التوطين الوهمي
@@ -132,8 +132,8 @@
           </div>
           <div class="w-[252px] h-[230px] xl:w-[401px]  md:ml-auto m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl bg-white">
             <div class="flex justify-start mb-10">
-              <img src="imges/computer.svg" alt="" class="ml-5">
-              <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] xl:text-3xl">مخاطر إدارية</h4>
+              <img src="imges/computer.svg" alt="" class="ml-5 bg-[#E4F1F6] rounded-[10px] p-2">
+              <h4 class="mt-auto mb-auto font-bold text-xl md:text-[26px] xl:text-3xl">مخاطر إدارية</h4>
             </div>
             <p class="text-xs md:text-sm	xl:text-lg text-slate-500 leading-normal">
               - تجنب عدم قدرة المسؤولين عن العمليات الحكومية على قيادة المنشأة
@@ -168,7 +168,7 @@
             <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter sm:mb-10 aos-init aos-animate text-white">أهمية إلمام</h2>
             <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl	font-bold">بعض المخاطر التي تتجنبها بإستخدام إلمام</h3>
           </div>
-          <div class="max-w-sm mx-auto grid gap-6 grid-cols-2 lg:grid-cols-4 items-start md:max-w-2xl lg:max-w-none font-bold">
+          <div class="max-w-sm mx-auto grid gap-4 md:gap-7 xl:gap-6 grid-cols-2 lg:grid-cols-4 items-start md:max-w-2xl lg:max-w-none font-bold">
               <!-- Card 1 -->
               <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
                  <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">1</div>
@@ -224,17 +224,17 @@
   openFaq6: false
   }
   "
-  class="relative z-20 overflow-hidden bg-white dark:bg-dark pt-20 pb-12 lg:pt-[120px] lg:pb-[90px]" style="direction: ltr;"
+  class="relative z-20 overflow-hidden bg-white dark:bg-dark pt-16 md:pt-14 xl:pt-14 pb-12 lg:pb-[90px]" style="direction: ltr;"
   >
   <div class="container mx-auto">
-    <div class="mb-16">
+    <div class="mb-7 md:mb-12 xl:mb-16">
       <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-3 sm:mb-10 aos-init aos-animate text-cyan-500">الأسئلة الشائعة</h2>
       <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl font-bold">أسئلة وأجوبة عن موقع إلمام وكيفية استخدامه</h3>
     </div>
      <div class="flex flex-wrap">
         <div class="w-full px-4 lg:w-1/2">
            <div
-              class="w-full p-2 mb-8 bg-white rounded-lg shadow-[0px_20px_95px_0px_rgba(201,203,204,0.30)] dark:shadow-[0px_20px_95px_0px_rgba(0,0,0,0.30)] dark:bg-dark-2"
+              class="w-full p-2 mb-8 md:mb-12 xl:mb-16 bg-white rounded-lg shadow-[0px_20px_95px_0px_rgba(201,203,204,0.30)] dark:shadow-[0px_20px_95px_0px_rgba(0,0,0,0.30)] dark:bg-dark-2"
               >
               <button
                  class="flex w-full text-right faq-btn"
@@ -277,7 +277,7 @@
               </div>
            </div>
            <div
-              class="w-full p-2 mb-8 bg-white rounded-lg shadow-[0px_20px_95px_0px_rgba(201,203,204,0.30)] dark:shadow-[0px_20px_95px_0px_rgba(0,0,0,0.30)] dark:bg-dark-2"
+              class="w-full p-2 mb-8 md:mb-12 xl:mb-16 bg-white rounded-lg shadow-[0px_20px_95px_0px_rgba(201,203,204,0.30)] dark:shadow-[0px_20px_95px_0px_rgba(0,0,0,0.30)] dark:bg-dark-2"
               >
               <button
                  class="flex w-full text-right faq-btn"
@@ -320,7 +320,7 @@
               </div>
            </div>
            <div
-              class="w-full p-2 mb-8 bg-white rounded-lg shadow-[0px_20px_95px_0px_rgba(201,203,204,0.30)] dark:shadow-[0px_20px_95px_0px_rgba(0,0,0,0.30)] dark:bg-dark-2"
+              class="w-full p-2 mb-8 md:mb-12 xl:mb-16 bg-white rounded-lg shadow-[0px_20px_95px_0px_rgba(201,203,204,0.30)] dark:shadow-[0px_20px_95px_0px_rgba(0,0,0,0.30)] dark:bg-dark-2"
               >
               <button
                  class="flex w-full text-right faq-btn"
@@ -365,7 +365,7 @@
         </div>
         <div class="w-full px-4 lg:w-1/2">
            <div
-              class="w-full p-2 mb-8 bg-white rounded-lg shadow-[0px_20px_95px_0px_rgba(201,203,204,0.30)] dark:shadow-[0px_20px_95px_0px_rgba(0,0,0,0.30)] dark:bg-dark-2"
+              class="w-full p-2 mb-8 md:mb-12 xl:mb-16 bg-white rounded-lg shadow-[0px_20px_95px_0px_rgba(201,203,204,0.30)] dark:shadow-[0px_20px_95px_0px_rgba(0,0,0,0.30)] dark:bg-dark-2"
               >
               <button
                  class="flex w-full text-right faq-btn"
@@ -408,7 +408,7 @@
               </div>
            </div>
            <div
-              class="w-full p-2 mb-8 bg-white rounded-lg shadow-[0px_20px_95px_0px_rgba(201,203,204,0.30)] dark:shadow-[0px_20px_95px_0px_rgba(0,0,0,0.30)] dark:bg-dark-2"
+              class="w-full p-2 mb-8 md:mb-12 xl:mb-16 bg-white rounded-lg shadow-[0px_20px_95px_0px_rgba(201,203,204,0.30)] dark:shadow-[0px_20px_95px_0px_rgba(0,0,0,0.30)] dark:bg-dark-2"
               >
               <button
                  class="flex w-full text-right faq-btn"
@@ -451,7 +451,7 @@
               </div>
            </div>
            <div
-              class="w-full p-2 mb-8 bg-white rounded-lg shadow-[0px_20px_95px_0px_rgba(201,203,204,0.30)] dark:shadow-[0px_20px_95px_0px_rgba(0,0,0,0.30)] dark:bg-dark-2"
+              class="w-full p-2 mb-8 md:mb-12 xl:mb-16 bg-white rounded-lg shadow-[0px_20px_95px_0px_rgba(201,203,204,0.30)] dark:shadow-[0px_20px_95px_0px_rgba(0,0,0,0.30)] dark:bg-dark-2"
               >
               <button
                  class="flex w-full text-right faq-btn"
@@ -499,7 +499,7 @@
   </section>
   <!-- ====== FAQ Section End -->
   <section class="max-w-4xl lg:mx-auto mx-auto text-center">
-      <div class="py-16 px-7 rounded-md bg-white">
+      <div class=" px-7 rounded-md bg-white">
 
     <div class="mb-16">
       <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-3 sm:mb-10 aos-init aos-animate text-cyan-500">الدعم الفني</h2>
@@ -507,29 +507,29 @@
     </div>
          <form class="font-bold" action="" method="POST">
 
-            <div class="md:col-span-2 mb-10">
-               <div class="flex mb-6">
+            <div class="md:col-span-2 mb-7 md:mb-[53px]">
+               <div class="flex mb-3.5 md:mb-5">
                   <img src="imges/profile.svg" alt="" class="ml-2.5">
                   <label for="subject" class="float-right block text-cyan-500 text-base md:text-xl">الإسم الكامل</label>
                </div>
                 <input type="email" id="email" name="email" class="w-full h-12 md:h-16 rounded-2xl border border-[#C5DAE4]  bg-[#FBFBFB] py-2 px-3 focus:outline-none focus:border-cyan-500">
             </div>
-           <div class="grid md:grid-cols-2 grid-cols-1 gap-6">
+           <div class="grid md:grid-cols-2 grid-cols-1 gap-7 md:gap-[53px]">
             <div>
-               <div class="flex mb-6">
+               <div class="flex mb-3.5 md:mb-5">
                   <img src="imges/phone-flip-2 1.svg" alt="" class="ml-2.5">
                   <label for="fname" class="float-right  text-cyan-500 text-base md:text-xl">رقم الجوال</label>
                </div>
                 <input type="text" id="fname" name="fname" class="w-full h-12 md:h-16 rounded-2xl border border-[#C5DAE4]  bg-[#FBFBFB] py-2 px-3 focus:outline-none focus:border-cyan-500">
             </div>
             <div>
-               <div class="flex mb-6">
+               <div class="flex mb-3.5 md:mb-5">
                   <img src="imges/email.svg" alt="" class="ml-2.5">
                   <label for="phone" class="float-right block  text-cyan-500 text-base md:text-xl">البريد الإلكتروني</label>
                </div>
                 <input type="text" id="phone" name="phone" class="w-full h-12 md:h-16 rounded-2xl border border-[#C5DAE4]  bg-[#FBFBFB] py-2 px-3 focus:outline-none focus:border-cyan-500">
             </div>
-               <div class="md:col-span-2 mb-12">
+               <div class="md:col-span-2">
                   <label for="phone" class="float-right block text-cyan-500 text-lg mb-6">رسالتك</label>
                    <textarea name="message" placeholder=" أكتب ما تواجهه بالتفصيل لحلها في أسرع وقت.." rows="5" cols="" class="w-full h-64 rounded-2xl border border-[#C5DAE4]  bg-[#FBFBFB] py-2 px-3 focus:outline-none focus:border-cyan-500"></textarea>
                </div>
@@ -542,30 +542,30 @@
   </section>
     
   <footer>
-   <div class="mx-5 md:mx-11 lg:mx-20 mt-[216px]">
+   <div class="mx-5 md:mx-11 lg:mx-20 mt-36 md:mt-40 xl:mt-80">
        <img src="imges/elmam-logo-1.svg" alt="" class="md:w-[96px] md:h-[59px] w-[73px] h-[45px]">
-   <h1 class="text-lg lg:text-base font-bold leading-tighter tracking-tighter aos-init aos-animate text-cyan-500 mt-12" data-aos="zoom-y-out">
+   <h1 class="text-lg lg:text-base font-bold leading-tighter tracking-tighter aos-init aos-animate text-cyan-500 mt-7 xl:mt-12" data-aos="zoom-y-out">
        إلمام .. كُن مُلماً بمنشأتك</h1>
 </div>
 
 <div class="  lg:flex lg:order-1 w-[50%] mt-12 mx-5 md:mx-11 lg:mx-20 lg:text-[22px]" id="mobile-menu-2" >
            <ul class=" flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 w-full justify-between lg:gap-[93px] lg:m-auto">
                <li>
-                   <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max text-xs md:text-xl xl:text-2xl font-normal" aria-current="page">من نحن</a>
+                   <a href="#" class="block pb-2 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max text-xs md:text-xl xl:text-2xl font-normal" aria-current="page">من نحن</a>
                </li>
                <li>
-                   <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max text-xs md:text-xl xl:text-2xl font-normal">سياسة الخصوصية</a>
+                   <a href="#" class="block pb-2 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max text-xs md:text-xl xl:text-2xl font-normal">سياسة الخصوصية</a>
                </li>
                <li>
-                   <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max text-xs md:text-xl xl:text-2xl font-normal">الشروط والأحكام</a>
+                   <a href="#" class="block pb-2 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max text-xs md:text-xl xl:text-2xl font-normal">الشروط والأحكام</a>
                </li>
                <li>
-                   <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max text-xs md:text-xl xl:text-2xl font-normal">الدعم الفني</a>
+                   <a href="#" class="block pb-2 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max text-xs md:text-xl xl:text-2xl font-normal">الدعم الفني</a>
                </li>
            </ul>
 </div>
 
-   <div class="mt-[86px] mx-5 md:mx-11 lg:mx-20 mb-8 flex justify-between">
+   <div class="mt-8 md:mt-7 xl:mt-12  mx-5 md:mx-11 lg:mx-20 pb-6 xl:pd-8 flex justify-between">
        <div>
            <p class="text-[10px] md:text-[15px]">جميع الحقوق محفوظة © 2024 | لموقع إلمام </p>
        </div>
