add bg-neutral-100 to all inputs in pro

--- a/sing-up.html
+++ b/sing-up.html
@@ -41,10 +41,10 @@
                         </div>
 			<div class="mx-5 md:mt-[67px] mt-8">
 				<div class="">
-					<input class="w-full h-[45px] md:w-[500px] md:h-[60px] mb-8 text-sm md:text-base px-4 py-3 bg-gray-200 focus:bg-gray-100 border  border-gray-200 rounded-[15px] focus:outline-none focus:border-purple-400 block text-start" type="" placeholder="البريد الالكتروني">
+					<input class="w-full h-[45px] md:w-[500px] md:h-[60px] mb-8 text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[15px] focus:outline-none focus:border-purple-400 block text-start" type="" placeholder="البريد الالكتروني">
                     </div>
 					<div class="relative" x-data="{ show: true }">
-						<input placeholder="كلمة المرور" :type="show ? 'password' : 'text'" class="mb-5 w-full h-[45px] md:w-[500px] md:h-[60px] text-sm md:text-base text-gray-200 px-4 py-3 rounded-[15px] bg-gray-200 focus:bg-gray-100 border border-gray-200 focus:outline-none focus:border-purple-400 block text-start">
+						<input placeholder="كلمة المرور" :type="show ? 'password' : 'text'" class="mb-5 w-full h-[45px] md:w-[500px] md:h-[60px] text-sm md:text-base text-gray-200 px-4 py-3 rounded-[15px] bg-neutral-100 focus:bg-gray-100 border border-gray-200 focus:outline-none focus:border-purple-400 block text-start">
 						<div class="flex items-center absolute inset-y-0 left-0 ml-5 text-sm leading-5">
 							<svg @click="show = !show" :class="{'hidden': !show, 'block':show }"
 							class="h-4 text-purple-700" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -63,7 +63,7 @@
 		</div>
 	</div>
 					<div class="relative" x-data="{ show: true }">
-						<input placeholder="تاكيد كلمة المرور " :type="show ? 'password' : 'text'" class="mb-5 w-full h-[45px] md:w-[500px] md:h-[60px] text-sm md:text-base text-gray-200 px-4 py-3 rounded-[15px] bg-gray-200 focus:bg-gray-100 border border-gray-200 focus:outline-none focus:border-purple-400 block text-start">
+						<input placeholder="تاكيد كلمة المرور " :type="show ? 'password' : 'text'" class="mb-5 w-full h-[45px] md:w-[500px] md:h-[60px] text-sm md:text-base text-gray-200 px-4 py-3 rounded-[15px] bg-neutral-100 focus:bg-gray-100 border border-gray-200 focus:outline-none focus:border-purple-400 block text-start">
 						<div class="flex items-center absolute inset-y-0 left-0 ml-5 text-sm leading-5">
 							<svg @click="show = !show" :class="{'hidden': !show, 'block':show }"
 							class="h-4 text-purple-700" fill="none" xmlns="http://www.w3.org/2000/svg"
