--- a/New-password.html
+++ b/New-password.html
@@ -22,7 +22,7 @@
 				<h1 class="mb-[80px] text-[22px] md:text-[34px] text-center font-bold">كلمة المرور الجديدة</h1>
 			</div>
 					<div class="relative" x-data="{ show: true }">
-						<input placeholder="كلمة المرور" :type="show ? 'password' : 'text'" class="mb-5 w-full h-[45px] md:w-[500px] md:h-[60px] text-sm md:text-base text-gray-200 px-4 py-3 rounded-[15px] bg-gray-200 focus:bg-gray-100 border border-gray-200 focus:outline-none focus:border-purple-400 block text-start mb-8">
+						<input placeholder="كلمة المرور" :type="show ? 'password' : 'text'" class="mb-5 w-full h-[45px] md:w-[500px] md:h-[60px] text-sm md:text-base text-gray-200 px-4 py-3 rounded-[15px] bg-neutral-100 focus:bg-gray-100 border border-gray-200 focus:outline-none focus:border-purple-400 block text-start mb-8">
 						<div class="flex items-center absolute inset-y-0 left-0 ml-5 text-sm leading-5 ">
 							<svg @click="show = !show" :class="{'hidden': !show, 'block':show }"
 							class="h-4 text-purple-700" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -41,7 +41,7 @@
 		</div>
 	</div>
     <div class="relative" x-data="{ show: true }">
-						<input placeholder="تاكيد كلمة المرور" :type="show ? 'password' : 'text'" class="mb-5 w-full h-[45px] md:w-[500px] md:h-[60px] text-sm md:text-base text-gray-200 px-4 py-3 rounded-[15px] bg-gray-200 focus:bg-gray-100 border border-gray-200 focus:outline-none focus:border-purple-400 block text-start">
+						<input placeholder="تاكيد كلمة المرور" :type="show ? 'password' : 'text'" class="mb-5 w-full h-[45px] md:w-[500px] md:h-[60px] text-sm md:text-base text-gray-200 px-4 py-3 rounded-[15px] bg-neutral-100 focus:bg-gray-100 border border-gray-200 focus:outline-none focus:border-purple-400 block text-start">
 						<div class="flex items-center absolute inset-y-0 left-0 ml-5 text-sm leading-5">
 							<svg @click="show = !show" :class="{'hidden': !show, 'block':show }"
 							class="h-4 text-purple-700" fill="none" xmlns="http://www.w3.org/2000/svg"
