--- a/Restore-password.html
+++ b/Restore-password.html
@@ -24,7 +24,7 @@
 			<div class="mx-5">
 				<div class="">
                     <p class="mb-[67px] text-center text-sm md:text-base">فضلاً أدخل البريد الإلكتروني المسجل لإرسال رابط الإستعادة</p>
-					<input class="w-full h-[45px] md:w-[500px] md:h-[60px] mb-8 text-sm md:text-base px-4 py-3 bg-gray-200 focus:bg-gray-100 border  border-gray-200 rounded-[15px] focus:outline-none focus:border-purple-400 block text-start" type="" placeholder="البريد الالكتروني">
+					<input class="w-full h-[45px] md:w-[500px] md:h-[60px] mb-8 text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[15px] focus:outline-none focus:border-purple-400 block text-start" type="" placeholder="البريد الالكتروني">
                     </div>
 
 
