--- a/dashboard.html
+++ b/dashboard.html
@@ -113,12 +113,28 @@
                 </button>
                 <div class="flex ">
                     <!--search bar -->
+                    <button type="submit" class="w-10 h-10 rounded-xl border  focus:bg-gray-100 active:bg-gray-200 text-white flex w-[38px] h-[38px] p-1 justify-center items-center rounded-lg bg-[#25A0D5] mr-16 ml-3.5">
+                    <svg class="fill-current " xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve" width="512px" height="512px">
+                        <path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
+                    </svg>
+                    </button>
+                    <div hidden class="md:block">
+                        <div class="relative flex items-center text-gray-400 focus-within:text-cyan-400">
+                            <input type="search" name="leadingIcon" id="leadingIcon" placeholder="بحث" class="w-[706px] pl-14 pr-4 py-2.5  rounded-lg text-sm text-gray-600 outline-none border border-gray-300 focus:border-cyan-300 transition bg-neutral-100	">
+                        </div>
+                    </div>
+                    <!--/search bar -->
+                    <button aria-label="search" class="w-10 h-10 rounded-xl border bg-gray-100 focus:bg-gray-100 active:bg-gray-200 md:hidden">
+                        <svg xmlns="http://ww50w3.org/2000/svg" class="w-4 mx-auto fill-current text-gray-600" viewBox="0 0 35.997 36.004">
+                            <path id="Icon_awesome-search" data-name="search" d="M35.508,31.127l-7.01-7.01a1.686,1.686,0,0,0-1.2-.492H26.156a14.618,14.618,0,1,0-2.531,2.531V27.3a1.686,1.686,0,0,0,.492,1.2l7.01,7.01a1.681,1.681,0,0,0,2.384,0l1.99-1.99a1.7,1.7,0,0,0,.007-2.391Zm-20.883-7.5a9,9,0,1,1,9-9A8.995,8.995,0,0,1,14.625,23.625Z"></path>
+                        </svg>
+                    </button>
                     <button aria-label="notification" class="mr-6">
                         <svg xmlns="imges/Frame 1000004255.svg" class="h-5 w-5 m-auto text-gray-600" viewBox="0 0 20 20" fill="currentColor">
                             <path d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z" />
                         </svg>
                     </button>
-                    <div class="flex text-sm">
+                    <div class="flex text-sm  lg:w-[75%] xl:w-[80%] 2xl:w-[85%]">
                         <h1 class="text-[#25A0D5]">لوحة التحكم</h1>
                         <h1 class=" mx-2 text-[#E9E9EC] mt-1" style="font-family: Inter;">/</h1>
                         <h1 class="text-[#989797]">موقع إلمام</h1>
