--- a/dashboard.html
+++ b/dashboard.html
@@ -134,6 +134,7 @@
                             <path d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z" />
                         </svg>
                     </button>
+                    <div class="flex text-sm">
                     <div class="flex text-sm  lg:w-[75%] xl:w-[80%] 2xl:w-[85%]">
                         <h1 class="text-[#25A0D5]">لوحة التحكم</h1>
                         <h1 class=" mx-2 text-[#E9E9EC] mt-1" style="font-family: Inter;">/</h1>
